# relay

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  ci.yml  release.yml
benchmarks/: bench_parquet.py  comprehensive_bench.py  phase0_bench.py  phase1_bench.py  phase2_bench.py  phase3_bench.py  phase5_bench.py
docs/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  DEVELOPMENT.md  OPTIMIZATION_PLAN.md
relay-arrow/: Cargo.toml
relay-arrow/src/: array.rs  builder.rs  ffi.rs  lib.rs  ops.rs  recordbatch.rs
relay-core/: Cargo.toml
relay-core/src/: config.rs  error.rs  lib.rs  schema.rs  types.rs
relay-exec/: Cargo.toml
relay-exec/src/: lib.rs
relay-expr/: Cargo.toml
relay-expr/src/: agg.rs  arena.rs  expr.rs  filter.rs  lib.rs  logical_plan.rs  optimizer.rs  plan.rs
relay-ffi/: Cargo.toml
relay-ffi/src/: lib.rs
relay-io/: Cargo.toml
relay-io/benches/: io_bench.rs
relay-io/src/: csv.rs  csv_simd.rs  ipc.rs  json.rs  lib.rs  madvise.rs  mmap.rs  parquet.rs
relay-memory/: Cargo.toml
relay-memory/src/: lib.rs
relay-python/: Cargo.toml  pyproject.toml
relay-python/relay/: __init__.py
relay-python/src/: lib.rs
relay-udf/: Cargo.toml
relay-udf/src/: lib.rs
tests/: test_memory_leak.py  test_parquet.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py
