[package]
name = "relay-arrow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Arrow integration, array ops, FFI for Relay engine"

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
memmap2 = { workspace = true }
relay-core = { path = "../relay-core" }
