[package]
name = "relay-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage adapters (IPC, Parquet, Vortex, Lance)"

[dependencies]
arrow = { workspace = true }
arrow-ipc = { workspace = true }
arrow-ord = { workspace = true }
parquet = { workspace = true }
rayon = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-buffer = { workspace = true }
memmap2 = { workspace = true }
csv = { workspace = true }
serde_json = { workspace = true }
relay-core = { path = "../relay-core" }
relay-arrow = { path = "../relay-arrow" }
thiserror = { workspace = true }
parking_lot = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
arrow-cast = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "io_bench"
harness = false
