[package]
name = "relay-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for Relay zero-copy data engine"

[lib]
name = "_relay"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
relay-arrow = { path = "../relay-arrow" }
relay-core = { path = "../relay-core" }
