[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "relay"
version = "0.6.0"
description = "High-performance zero-copy data engine with SIMD expressions, parallel processing, and Parquet support"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "relay._relay"
